welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:30: error: not found: value ch
    var y = ch.toInt
            ^Array2:33: error: not found: value y
    Brosse(T(k+y))
               ^